# mind-cli

./: .env.example  .gitignore  ADAPTERS.md  CONTRIBUTING.md  LICENSE  OPEN_SOURCE_ADOPTION.md  README.md  RELEASING.md  install.sh  pyproject.toml  skills-lock.json
.agents/skills/simplify-ai-architecture/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
mind/: check.py  cli_helpers.py  config.py  display.py  doctor.py  install_agents.py  main.py  read_sources.py  redact.py  store.py  summarizer.py  sync.py
mind/adapters/: base.py  claude_code.py  codex.py  cursor.py  project_files.py  registry.py
mind/commands/: __init__.py  check_cmd.py  core.py  handoff.py  install_cmd.py  notes.py  projects.py  setup.py
mind/integrations/hooks/: mind-check.sh
mind/integrations/skills/: mind-recap
skills/mind-recap/: SKILL.md
tests/: test_ci_fast_gate.py  test_claude_code_adapter.py  test_codex_adapter.py  test_digest_validate.py  test_handoff.py  test_snapshot.py
tests/fixtures/: claude_code_compaction.jsonl  claude_code_session.jsonl  codex_session.jsonl
