[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mind-cli"
version = "0.1.0"
description = "AI project context recovery CLI for Claude Code, Codex, and Cursor"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Matheus Buniotto", email = "matheus.buniotto@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "ai",
    "cli",
    "context-recovery",
    "claude-code",
    "codex",
    "cursor",
    "developer-tools",
    "llm",
    "productivity",
    "session-recap",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Version Control",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "anthropic>=0.40",
    "openai>=1.30",
    "pyyaml>=6",
    "python-dateutil>=2.9",
    "questionary>=2.0",
    "python-dotenv>=1.0",
]

[project.urls]
Homepage = "https://github.com/matheusbuniotto/mind-cli"
Repository = "https://github.com/matheusbuniotto/mind-cli"
Issues = "https://github.com/matheusbuniotto/mind-cli/issues"
Documentation = "https://github.com/matheusbuniotto/mind-cli#readme"
Changelog = "https://github.com/matheusbuniotto/mind-cli/releases"

[project.scripts]
mind = "mind.main:app"

[tool.hatch.build.targets.wheel]
packages = ["mind"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
